fix bg-pattern gap bug: pattern becomes unaligned on large screens during resize

--- a/css/_nav.scss
+++ b/css/_nav.scss
@@ -61,7 +61,7 @@ header {
       }
 
       @include breakpoint($bp-huge) {
-        background-size: 52px;
+        background-size: 54px;
       }
     }
 
@@ -307,7 +307,7 @@ footer {
       }
 
       @include breakpoint($bp-huge) {
-        background-size: 52px;
+        background-size: 54px;
       }
     }
 
